cheatsheat/deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    app: demo-pod
    version: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-pod
      version: default
  template:
    metadata:
      labels:
        app: demo-pod
        version: default
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: demo-pod
        image: scav/colour-service:any
        ports:
        - containerPort: 8080

        resources:
          limits:
            cpu: "250m"
            memory: "250Mi"
          requests:
            cpu: "200m"
            memory: "100Mi"
---
#apiVersion: autoscaling/v2beta1
#kind: HorizontalPodAutoscaler
#metadata:
#    name: demo-pod
#    labels:
#      app: demo-pod
#      version: default
#spec:
#    minReplicas: 2
#    maxReplicas: 3
#    scaleTargetRef:
#      apiVersion: apps/v1
#      kind: Deployment
#      name: demo-pod
#    metrics:
#      - type: Resource
#        resource:
#          name: cpu
#          targetAverageUtilization: 66
---
kind: Service
apiVersion: v1
metadata:
  name: demo-service
  labels:
    app: demo-pod
spec:
  selector:
    app: demo-pod
  ports:
  - port: 7070
    name: http
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lb-service
spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 7070
